name:                github-stats-client
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/swamp-agr/github-stats-client#readme
license:             BSD3
author:              Andrey Prokopenko
maintainer:          marunarkh@gmail.com
copyright:           2017 Andrey Prokopenko
category:            Github
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Types
                     , API
                     , Logic
                     , CLI
                     , Utils

  build-depends:       base >= 4.7 && < 5
                     , yaml
                     , text
                     , time
                     , bytestring
                     , wreq
                     , regex-compat

  default-language:    Haskell2010

executable github-stats-client
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , github-stats-client

  default-language:    Haskell2010

test-suite github-stats-client-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , github-stats-client
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/swamp-agr/github-stats-client
